# service/service/trainee/trainee-core/src/main/java/bs/service/trainee/controller/generated/TraineeUserController.java
@@ -1,0 +1,96 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.6.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package bs.service.trainee.controller.generated;
+
+import bs.lib.common.model.generated.NewRecordVTO;
+import bs.lib.common.model.vto.ErrorVTO;
+import bs.service.trainee.model.generated.TraineeDTO;
+import bs.service.trainee.model.generated.TraineeVTO;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.annotation.Generated;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Controller;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.6.0")
+@Validated
+@Controller
+@Tag(name = "TraineeUser", description = "the TraineeUser API")
+public interface TraineeUserController {
+
+    /**
+     * POST /trainees/users/{traineeUserId} : Create trainee
+     *
+     * @param traineeUserId
+     *            (required)
+     * @param traineeDTO
+     *            (required)
+     *
+     * @return OK (status code 200) or Bad Request (status code 400)
+     */
+    @Operation(operationId = "createTraineeUser", summary = "Create trainee", tags = { "TraineeUser" }, responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = {
+                    @Content(mediaType = "application/json", schema = @Schema(implementation = NewRecordVTO.class)) }),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                    @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorVTO.class)) }) })
+    @RequestMapping(method = RequestMethod.POST, value = "/trainees/users/{traineeUserId}", produces = {
+            "application/json" }, consumes = { "application/json" })
+
+    ResponseEntity<NewRecordVTO> _createTraineeUser(
+            @Parameter(name = "traineeUserId", description = "", required = true, in = ParameterIn.PATH) @PathVariable("traineeUserId") Integer traineeUserId,
+            @Parameter(name = "TraineeDTO", description = "", required = true) @Valid @RequestBody TraineeDTO traineeDTO);
+
+    /**
+     * GET /trainees/users/{traineeUserId} : Retrieve trainee user
+     *
+     * @param traineeUserId
+     *            (required)
+     *
+     * @return OK (status code 200) or Bad Request (status code 400)
+     */
+    @Operation(operationId = "getTraineeUserById", summary = "Retrieve trainee user", tags = {
+            "TraineeUser" }, responses = { @ApiResponse(responseCode = "200", description = "OK", content = {
+                    @Content(mediaType = "application/json", schema = @Schema(implementation = TraineeVTO.class)) }),
+                    @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                            @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorVTO.class)) }) })
+    @RequestMapping(method = RequestMethod.GET, value = "/trainees/users/{traineeUserId}", produces = {
+            "application/json" })
+
+    ResponseEntity<TraineeVTO> _getTraineeUserById(
+            @Parameter(name = "traineeUserId", description = "", required = true, in = ParameterIn.PATH) @PathVariable("traineeUserId") Integer traineeUserId);
+
+    /**
+     * PUT /trainees/users/{traineeUserId} : Update Trainee User By Id
+     *
+     * @param traineeUserId
+     *            (required)
+     * @param traineeDTO
+     *            (required)
+     *
+     * @return OK (status code 200) or Bad Request (status code 400)
+     */
+    @Operation(operationId = "updateTraineeUser", summary = "Update Trainee User By Id", tags = {
+            "TraineeUser" }, responses = { @ApiResponse(responseCode = "200", description = "OK", content = {
+                    @Content(mediaType = "application/json", schema = @Schema(implementation = NewRecordVTO.class)) }),
+                    @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                            @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorVTO.class)) }) })
+    @RequestMapping(method = RequestMethod.PUT, value = "/trainees/users/{traineeUserId}", produces = {
+            "application/json" }, consumes = { "application/json" })
+
+    ResponseEntity<NewRecordVTO> _updateTraineeUser(
+            @Parameter(name = "traineeUserId", description = "", required = true, in = ParameterIn.PATH) @PathVariable("traineeUserId") Integer traineeUserId,
+            @Parameter(name = "TraineeDTO", description = "", required = true) @Valid @RequestBody TraineeDTO traineeDTO);
+
+}
